--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     top: 10px;
     left: 50%;
     color: white;
-    font-size: 23px;
+    font-size: 21px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -33,7 +33,19 @@ p {
     top: 0px;
     left: 0px;
     color: rgb(0, 0, 0);
-    font-size: 23px;
+    font-size: 21px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.buttonGroup {
+    display: flex;
+    justify-content: center;
+}
+
+.btn {
+    padding: 12px 20px;
+    border: none;
+    margin: none;
+    background-color: white;
+    color: black;
+}
