--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,20 @@
+.top-pop {
+    position: fixed;
+    top: -100px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: top 0.2s ease; 
+}
+
 .success-div {
     display: flex;
     background-color: green;
-    padding: 12px 20px;
-    margin: auto;
-    position: fixed;
-    top: 10px;
-    left: 50%;
+    padding: 0px 20px;
     color: white;
     font-size: 21px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-p {
-    margin: 0px;
-}
 
 .close {
     margin-left: 20px;
@@ -23,19 +24,21 @@ p {
 
 .confirm {
     display: flex;
-    position: absolute;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;    
+    top: 0px;
     z-index: 1000;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
-    top: 0px;
-    left: 0px;
     color: rgb(0, 0, 0);
     font-size: 21px;
     font-family: Arial, Helvetica, sans-serif;
+    backdrop-filter: blur(1px);
+    background-color: rgba(255, 255, 255, 0.5);
 }
+
 
 .buttonGroup {
     display: flex;
@@ -43,9 +46,22 @@ p {
 }
 
 .btn {
-    padding: 12px 20px;
-    border: none;
-    margin: none;
+    padding: 10px 20px;
+    border: 2px solid black;
+    margin: 5px;
+    font-size: 17px;
     background-color: white;
     color: black;
+    transition: all 0.4s;
+    cursor: pointer;
+}
+
+.cancelButton:hover {
+    border-color:red;
+    color:red;
+}
+
+.yesButton:hover {
+    border-color:green;
+    color:green;
 }
