--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,24 @@
     transition: top 0.2s ease; 
 }
 
-.success-div {
+.success {
+    max-width: 100vw;
     display: flex;
     background-color: green;
     padding: 0px 20px;
     color: white;
     font-size: 21px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.error {
+    display: flex;
+    background-color: rgb(186, 12, 0);
+    padding: 0px 20px;
+    color: white;
+    font-size: 21px;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 100vw;
 }
 
 
@@ -35,7 +46,7 @@
     color: rgb(0, 0, 0);
     font-size: 21px;
     font-family: Arial, Helvetica, sans-serif;
-    backdrop-filter: blur(1px);
+    backdrop-filter: blur(10px);
     background-color: rgba(255, 255, 255, 0.5);
 }
 
@@ -54,6 +65,10 @@
     color: black;
     transition: all 0.4s;
     cursor: pointer;
+}
+
+.btn:hover {
+    background-color: white;
 }
 
 .cancelButton:hover {
