--- a/example.css
+++ b/example.css
@@ -9,7 +9,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: start;
-    height: 100vh;
+    height: auto;
     justify-content: center;
     width: 500px;
 }
