--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 .success {
     max-width: 100vw;
     display: flex;
+    z-index: 1001;
     background-color: green;
     padding: 0px 20px;
     color: white;
@@ -16,8 +17,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+input {
+    padding: 10px 20px;
+    font-size: 20px;
+}
+
 .error {
     display: flex;
+    z-index: 1001;
     background-color: rgb(186, 12, 0);
     padding: 0px 20px;
     color: white;
