--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
 input {
     padding: 10px 20px;
     font-size: 20px;
+    margin-bottom: 20px;
 }
 
 .error {
@@ -51,7 +52,7 @@ input {
     align-items: center;
     justify-content: center;
     color: rgb(0, 0, 0);
-    font-size: 21px;
+    font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
     backdrop-filter: blur(10px);
     background-color: rgba(255, 255, 255, 0.5);
@@ -63,7 +64,7 @@ input {
     justify-content: center;
 }
 
-.btn {
+.pop-btn {
     padding: 10px 20px;
     border: 2px solid black;
     margin: 5px;
@@ -74,7 +75,7 @@ input {
     cursor: pointer;
 }
 
-.btn:hover {
+.pop-btn:hover {
     background-color: white;
 }
 
