--- a/example.css
+++ b/example.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 main {
@@ -11,7 +12,8 @@ main {
     align-items: start;
     height: auto;
     justify-content: center;
-    width: 500px;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -24,10 +26,17 @@ h2 {
     font-weight: 500;
 }
 
+.subheading {
+    margin-bottom: 50px;
+    font-size: 25px; 
+    margin-top: 8px;
+}
 
-input {
+.example-input {
     padding: 10px 20px;
     font-size: 20px;
+    margin-right: 5px;
+    height: 100%;
 }
 
 .example-button {
@@ -44,8 +53,13 @@ button:hover {
     background-color: #ededed;
 }
 
+.example-div {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .sandboxPreview {
-    width: 100%;
+    width: 90%;
     border: 1px solid #ccc;
     padding: 20px;
     border: 1px solid #ccc;
@@ -54,4 +68,34 @@ button:hover {
     margin-bottom: 40px;
     margin-top: 15px;
     font-size: 20px;
+  }
+
+  @media (max-width: 570px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+    input {
+        max-width: 100%;
+        margin-right: 0px;
+    }
+    .example-div {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .example-button {
+        margin-top: 10px;
+    }
+
+    .subheading {
+        margin-bottom: 20px;
+    }
+
+    .sandboxPreview {
+        max-width: 85%;
+    }
   }
