--- a/pop.css
+++ b/pop.css
@@ -1,4 +1,4 @@
-.top-pop {
+.pop-top {
     position: fixed;
     top: -100px;
     left: 50%;
@@ -6,9 +6,10 @@
     transition: top 0.2s ease; 
 }
 
-.success {
-    max-width: 100vw;
+.pop-success {
+    max-width: 100%;
     display: flex;
+    justify-content: space-between;
     z-index: 1001;
     background-color: green;
     padding: 0px 20px;
@@ -17,15 +18,16 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-input {
+.pop-input {
     padding: 10px 20px;
     font-size: 20px;
     margin-bottom: 20px;
 }
 
-.error {
+.pop-error {
     display: flex;
     z-index: 1001;
+    justify-content: space-between;
     background-color: rgb(186, 12, 0);
     padding: 0px 20px;
     color: white;
@@ -35,13 +37,13 @@ input {
 }
 
 
-.close {
+.pop-close {
     margin-left: 20px;
     font-size: 20px;
     cursor: pointer;
 }
 
-.confirm {
+.pop-confirm {
     display: flex;
     position: fixed;
     width: 100vw;
@@ -50,7 +52,7 @@ input {
     z-index: 1000;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     color: rgb(0, 0, 0);
     font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
@@ -59,7 +61,7 @@ input {
 }
 
 
-.buttonGroup {
+.pop-buttonGroup {
     display: flex;
     justify-content: center;
 }
@@ -79,12 +81,25 @@ input {
     background-color: white;
 }
 
-.cancelButton:hover {
+.pop-cancelButton:hover {
     border-color:red;
     color:red;
 }
 
-.yesButton:hover {
+.pop-yesButton:hover {
     border-color:green;
     color:green;
+}
+
+@media (max-width:570px) {
+    .pop-success {
+        max-width: 80%;
+        width: 100%;
+        font-size: 19px;
+    }
+    .pop-error {
+        max-width: 80%;
+        width: 100%;
+        font-size: 19px;
+    }
 }
