--- a/pop.css
+++ b/pop.css
@@ -52,7 +52,7 @@
     z-index: 1000;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     color: rgb(0, 0, 0);
     font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
@@ -101,5 +101,8 @@
         max-width: 80%;
         width: 100%;
         font-size: 19px;
+    }
+    .pop-confirm {
+        justify-content: start;
     }
 }
