--- a/pop.css
+++ b/pop.css
@@ -105,6 +105,6 @@
     .pop-confirm {
         justify-content: start;
         backdrop-filter: blur(100px);
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgb(255, 255, 255);
     }
 }
