--- a/pop.css
+++ b/pop.css
@@ -4,18 +4,19 @@
     left: 50%;
     transform: translateX(-50%);
     transition: top 0.2s ease; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1001;
+    font-size: 21px;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 100%;
 }
 
 .pop-success {
-    max-width: 100%;
-    display: flex;
-    justify-content: space-between;
-    z-index: 1001;
     background-color: green;
     padding: 0px 20px;
     color: white;
-    font-size: 21px;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .pop-input {
@@ -25,15 +26,9 @@
 }
 
 .pop-error {
-    display: flex;
-    z-index: 1001;
-    justify-content: space-between;
     background-color: rgb(186, 12, 0);
     padding: 0px 20px;
     color: white;
-    font-size: 21px;
-    font-family: Arial, Helvetica, sans-serif;
-    max-width: 100vw;
 }
 
 
@@ -107,4 +102,10 @@
         backdrop-filter: blur(100px);
         background-color: rgb(255, 255, 255);
     }
+}
+
+/* Fancy popups: */
+.pop-svg {
+    width: 20px;
+    height: 20px;
 }
