--- a/example.css
+++ b/example.css
@@ -21,6 +21,11 @@ h1 {
     margin-bottom: 0px;
 }
 
+h2 {
+    font-size: 45px;
+    font-weight: 600;
+}
+
 h3 {
     font-size: 35px;
     font-weight: 500;
